# compact-security-detectors-sdk

./: .gitignore  .gitmodules  Cargo.toml  README.md  contributing.md  package-lock.json
.github/workflows/: artifacts.yml  build.yml  release.yml
compact-scanner/: Cargo.toml  README.md
compact-scanner/docs/: architecture.md  cli_usage.md  detectors_integration.md  getting_started.md  index.md  json_output_format.md  parser_module.md
compact-scanner/src/: main.rs  parser.rs
corpus/: seabattle.compact
detectors/: Cargo.toml  README.md  build.rs
detectors-runner/: Cargo.toml
detectors-runner/src/: main.rs  parser.rs
detectors/docs/: contributing.md  getting-started.md  index.md  project-structure.md  testing.md  writing-detectors.md
detectors/metadata/: array-loop-bound-check.yml  assertion-error-message-consistency.yml  assertion-error-message-verbose.yml
detectors/src/: array_loop_bound_check.rs  assertion_error_message_verbose.rs  lib.rs  new_rule.rs  utils.rs
docs/: detectors-guide.md  rules-guide.md
examples/external-detector/: Cargo.toml
examples/external-detector/src/: lib.rs
macro-lib/: Cargo.toml
parser/: Cargo.toml  README.md
parser/src/: compact.lalrpop  lib.rs
rules/: Cargo.toml
rules-runner/: Cargo.toml
rules-runner/src/: main.rs
rules/src/: lib.rs
sdk/: Cargo.toml  README.md  macro.rs  tarpaulin.toml
sdk/docs/: architecture.md  contributing.md  detectors.md  getting_started.md  index.md  installation.md  modules.md  overview.md  style_guidelines.md  testing.md
sdk/src/: builder_tests.rs  codebase.rs  detector.rs  lib.rs  passes.rs  storage.rs  symbol_table.rs  type_inference.rs
sdk/src/ast/: builder.rs  declaration.rs  definition.rs  directive.rs  expression.rs  function.rs  literal.rs  mod.rs  node.rs  node_type.rs  program.rs  statement.rs  ty.rs
tree-sitter-compact/: Cargo.toml  README.md  lib.rs
tree-sitter-compact/src/: grammar.json  node-types.json  parser.c
