[workspace]

resolver = "2"

members = [
    "sdk",
    "detectors",
    "compact-scanner",
    "tree-sitter-compact"
]

[workspace.package]
version = "0.1.30"
edition = "2021"
license = "MIT"
homepage = "https://www.openzeppelin.com/"
repository = "https://github.com/OpenZeppelin/midnight-security-detectors-sdk"

[workspace.dependencies]
compact-security-detectors-sdk = { path = "./sdk" }
compact-security-detectors = { path = "./detectors" }
compact-scanner = { path = "./compact-scanner" }
tree-sitter-compact = { path = "./tree-sitter-compact" }
anyhow = "1.0.98"
tree-sitter = "0.25.1"

compact-parser = { path = "./parser" }
