[package]
name = "midnight-security-detectors-runner"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
midnight-security-detectors.workspace = true
midnight-security-detectors-sdk.workspace = true
