[package]
name = "compact-security-detectors"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
compact-security-detectors-sdk.workspace = true

[build-dependencies]
serde_yaml = "0.9.17"
compact-security-detectors-sdk.workspace = true
