[package]
name = "compact-parser"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
compact-security-detectors-sdk.workspace = true

[build-dependencies]
lalrpop = "0.22.1"
