[package]
name = "midnight-security-rules-runner"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
midnight-security-rules.workspace = true
midnight-security-rules-sdk.workspace = true
