[package]
name = "midnight-security-rules-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
uuid = { version = "1.1", features = ["v4"] }
tree-sitter = "0.25.1"

anyhow.workspace = true